front-end update
-메인화면
-장바구니화면
-공유장바구니목록화면
-공유장바구니화면
-북스터디목록화면
-참여중인북스터디목록화면
-북스터디방화면

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,27 +1,29 @@
 <div class="navbar">
     <div class="content">
-        <a class="logo" href="/"> Best Friend </a>
-        <div class="menu">
-            <ul class="drop">
-                <li>
-                    <a href="/">도서</a>
-                    <ul class="dropmenu">
-                        <li><a href="#bestseller">베스트</a></li>
-                        <li><a href="#">신간</a></li>
-                        <li><a href="#">추천</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">메뉴</a>
-                </li>
-                <li>
-                    <a href="#">메뉴</a>
-                </li>
-            </ul>
+        <div class="wrap">
+            <a class="logo" href="/">더블공유시스템</a>
+            <div class="menu">
+                <a href="/">베스트</a>
+                <span class="menudiv"></span>
+                <a href="/">신상품</a>
+                <span class="menudiv"></span>
+                <a href="/study">스터디</a>
+            </div>
         </div>
+
         <div class="item">
-            <a class="btn-s" href="sign/signin">로그인</a>
-            <a class="btn-s" href="sign/signup">회원가입</a>
+            <a class="topbtn" href="/cart"
+                ><img src="/images/cart.png" alt=""
+            /></a>
+            <a class="topbtn" href="sign/signup"
+                ><img src="/images/my.png" alt=""
+            /></a>
+            <a class="topbtn" href="sign/signup"
+                ><img src="/images/logout.png" alt=""
+            /></a>
+            <a class="topbtn" href="sign/signup"
+                ><img src="/images/question.png" alt=""
+            /></a>
         </div>
     </div>
 </div>
