--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -41,7 +41,7 @@
     --light-cyan: #CFF4FC;
     --cyan: #0dcaf0;
     --light-blue: #D0E2FF;
-    --blue: #0d6efd;
+    --blue: #3592FF;
     --indigo: #6610f2;
     --purple: #6f42c1;
     --black: #000;
@@ -57,8 +57,8 @@
     --gray-700: #495057;
     --gray-800: #343a40;
     --gray-900: #212529;
-    --primary: #4c83ff;
-    --secondary: #004fff;
+    --primary: #3592FF;
+    --secondary: #3592FF;
     --success: #198754;
     --info: #0dcaf0;
     --warning: #ffc107;
@@ -110,6 +110,12 @@ body {
     align-items: center;
     padding: 4rem;
     background-color: var(--white);
+}
+
+.page {
+    margin: 40px 0;
+    width: 100%;
+    max-width: 1280px;
 }
 
 a {
@@ -215,10 +221,10 @@ h6 {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 100vw;
-    height: 4rem;
-    background: rgba(255, 255, 255, .3);
-    backdrop-filter: blur(4px);
+    width: 100%;
+    height: 80px;
+    background: var(--white);
+    border-radius: 1px solid #999999;
     z-index: var(--z-navbar);
 }
 
@@ -227,11 +233,18 @@ h6 {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    margin: 0 4rem;
     width: 100%;
-    max-width: 960px;
+    max-width: 1280px;
 }
 
-.navbar>.content>.logo {
+.navbar>.content>.wrap {
+    display: flex;
+    align-items: center;
+}
+
+
+.navbar>.content>.wrap>.logo {
     display: flex;
     flex-direction: row;
     justify-content: left;
@@ -240,32 +253,28 @@ h6 {
     font-size: 2rem;
 }
 
-.navbar>.content>.menu {
+.navbar>.content>.wrap>.menu {
+    margin-left: 16px;
     flex: 1;
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 100%;
     font-family: var(--fontBold);
     font-size: 1.25rem;
 }
 
-.navbar>.content>.menu:hover>ul>li>a {
-    color: var(--gray-500);
-    text-align: center;
+.navbar>.content>.wrap>.menu>a {
+    padding: 24px;
 }
 
-.navbar>.content>.menu>ul>li>a {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    padding: 0 1rem;
-    text-align: center;
-    color: var(--black);
+.navbar>.content>.wrap>.menu>.menudiv {
+    width: 1px;
+    height: 28px;
+    background: var(--black);
+    display: block;
 }
 
-.navbar>.content>.menu>ul>li>a:hover {
-    color: var(--black);
-}
 
 .navbar>.content>.item {
     display: flex;
@@ -969,4 +978,31 @@ input[id="sidebar"]:checked+ul+div {
 
 .pd-0 {
     padding: 0;
+}
+
+.topbtn {
+    margin: 0px 4px;
+}
+
+.recommendwrap {
+    width: 100%;
+    margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+}
+
+.booklist {
+    display: flex;
+    flex-direction: row;
+    width: 1920px;
+    overflow: scroll;
+}
+
+.book {
+    min-width: 240px;
+    width: 240px;
+    height: 320px;
+    background: var(--gray-600);
+    border-radius: 8px;
+    margin-right: 20px;
 }
