--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,9 +2,56 @@
 <html lang="en">
     <head>
         <%- include('head') %>
+        <style>
+            h5 {
+                color: var(--blue);
+                font-family: var(--fontBold);
+            }
+            .more {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                margin-bottom: 12px;
+            }
+            .showmore {
+                border: 1px solid var(--black);
+                border-radius: 1000px;
+                padding: 2px 10px;
+            }
+        </style>
     </head>
     <body>
-        <%- include('navbar')%> <%- include('components/mainbanner')%> <%-
-        include('components/bestseller')%> <%- include('components/booklist') %>
+        <%- include('navbar')%>
+        <div class="page">
+            <div class="recommendwrap">
+                <h5>실시간 추천</h5>
+                <div class="more">
+                    <p>현재 가장 인기있는 도서를 만나보세요.</p>
+                    <a href="" class="showmore">더보기 +</a>
+                </div>
+                <div class="booklist">
+                    <% for(var i = 0; i < 10; i ++) { %>
+                    <div class="book">
+                        <img src="" alt="" />
+                    </div>
+                    <% } %>
+                </div>
+            </div>
+            <div class="recommendwrap">
+                <h5>주간 추천</h5>
+
+                <div class="more">
+                    <p>주차별 인기도서를 만나보세요.</p>
+                    <a href="" class="showmore">더보기 +</a>
+                </div>
+                <div class="booklist">
+                    <% for(var i = 0; i < 10; i ++) { %>
+                    <div class="book">
+                        <img src="" alt="" />
+                    </div>
+                    <% } %>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
