--- a/views/head.ejs
+++ b/views/head.ejs
@@ -2,6 +2,12 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Best Friend : 도서 구매</title>
+<link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+    crossorigin="anonymous"
+/>
 <link href="/stylesheets/style.css" rel="stylesheet" />
 <link
     href="https://fonts.googleapis.com/icon?family=Material+Icons"
