--- a/views/study.ejs
+++ b/views/study.ejs
@@ -14,7 +14,7 @@
                         BACK
                     </div>
                     <div>
-                        <button onclick="location.href='/mystudy'">
+                        <button onclick="location.href='/study/mystudy'">
                             참여중인 북스터디 목록
                         </button>
                         <button>방 만들기</button>
