--- a/views/mystudy.ejs
+++ b/views/mystudy.ejs
@@ -20,7 +20,10 @@
 
             <div class="roomlist">
                 <% for(var i = 0; i < roomlist.length; i++) { %>
-                <div class="room">
+                <a
+                    class="room"
+                    href="/study/studyroom/<%- roomlist[i].북스터디방식별번호 %>"
+                >
                     <img
                         src=""
                         alt=""
@@ -57,7 +60,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </a>
                 <% } %> <% for(var i = 0; i < 4-(roomlist.length%4); i++) { %>
                 <div class="room" style="visibility: hidden"></div>
                 <% } %>
