--- a/views/studyroom.ejs
+++ b/views/studyroom.ejs
@@ -16,9 +16,9 @@
                     <p class="wraptitle">정보</p>
                     <div class="divider"></div>
                     <p>도서명</p>
-                    <span>데이터베이스 개론</span>
+                    <span><%- bookinfo.도서명 %></span>
                     <p>북스터디명</p>
-                    <span>데이터베이스 여행</span>
+                    <span><%- roominfo.북스터디이름 %></span>
                 </div>
                 <div class="users">
                     <p class="wraptitle">참가중</p>
@@ -48,7 +48,9 @@
                     <p class="desc">과반수 이상 동의시 강제퇴장됩니다.</p>
                 </div>
                 <div class="func1">
-                    <span class="material-icons"> create </span>주제 추가
+                    <a href="../addsubject/<%- roominfo.북스터디방식별번호 %>">
+                        <span class="material-icons"> create </span>주제 추가
+                    </a>
                 </div>
                 <div class="func1">
                     <span class="material-icons"> list </span>주제 목록
@@ -57,11 +59,25 @@
                     <span class="material-icons"> delete </span>주제 삭제
                 </div>
             </div>
-            <div class="roomcontent">
-                <div class="chat"><%- include('chat/chat1')%></div>
+            <form class="roomcontent" method="post">
+                <div class="chat"><%- include('chat/chat')%></div>
                 <div class="inputmsg">
-                    <input type="text" placeholder="대화를 입력하세요." />
-                    <button>전송</button>
+                    <input
+                        name="msg"
+                        type="text"
+                        placeholder="대화를 입력하세요."
+                    />
+                    <input
+                        name="ri"
+                        type="hidden"
+                        value="<%- roominfo.북스터디방식별번호 %>"
+                    />
+                    <input
+                        name="rr"
+                        type="hidden"
+                        value="<%- roominfo.진행회차 %>"
+                    />
+                    <button type="submit">전송</button>
                 </div>
             </div>
         </div>
