--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -97,6 +97,11 @@ a {
     color: var(--black);
 }
 
+a:hover {
+    text-decoration: none;
+    color: var(--black);
+}
+
 html {
     font-family: 'dotum';
     font-size: 16px;
