--- a/public/stylesheets/cart.css
+++ b/public/stylesheets/cart.css
@@ -48,6 +48,11 @@ h6 {
     font-family: var(--fontBold);
 }
 
+.header>.func>div:nth-child(2) {
+    display: flex;
+    flex-direction: row;
+}
+
 .header>.func button {
     padding: 6px 8px;
     border: none;
@@ -55,6 +60,17 @@ h6 {
     background: var(--blue);
     color: var(--white);
     font-family: var(--fontBold);
+    margin-left: 4px;
+}
+
+.header>.func a {
+    padding: 6px 8px;
+    border: none;
+    border-radius: 4px;
+    background: var(--blue);
+    color: var(--white);
+    font-family: var(--fontBold);
+    margin-left: 4px;
 }
 
 .headermenu {
